# polyOS

./: .gitignore  Build.sh  Makefile  Todo  build.sh  debug.md  hello.txt  install_tool.sh  run.sh
.devcontainer/: Dockerfile  devcontainer.json  setup-vnc.sh
include/math/: arith64.h
include/os/: bitmap.h  classic.h  config.h  disk.h  elf.h  elfloader.h  fat16.h  file.h  font.h  gdt.h  heap.h  idt.h  io.h  kernel.h  (+15 more)
programs/polyos_std/: Cargo.toml  build.rs  i686-polyos.json
programs/polyos_std/.cargo/: config.toml
programs/polyos_std/src/: cli.rs  entry.rs  fs.rs  io.rs  lib.rs  memory.rs  prelude.rs  process.rs  stdio.rs  sync.rs
src/: config.h  kernel.asm  kernel.c  kernel.h  status.h
src/rust/: Cargo.toml  build.rs  i686-polyos.json  linker.ld
src/rust/.cargo/: config.toml
src/rust/src/: allocator.rs  c_shims.rs  constant.rs  entrypoint.rs  error.rs  gdt.rs  kernel.rs  kernel_main.rs  kernel_selftest.rs  lib.rs  macros.rs  main.rs  memory.rs  panic.rs  print.rs  serial.rs  tss.rs  utils.rs
src/rust/src/device/: block_dev.rs  bufstream.rs  console.rs  control.rs  disk.rs  driver.rs  io.rs  keyboard.rs  managed.rs  mod.rs  network.rs  node.rs  null.rs  pci.rs  serial.rs  timer.rs  zero.rs
src/rust/src/device/screen/: bitmap.rs  driver.rs  fonts.rs  framebuffer.rs  graphic_vga.rs  mod.rs  modes.rs  text_vga.rs  vga.rs
src/rust/src/devices/: pci.rs
src/rust/src/fs/: devfs.rs  file.rs  memfs.rs  mod.rs  path.rs  pipe.rs  root.rs  tmp.rs  vfs.rs
src/rust/src/fs/fat/: driver.rs  file.rs  filesystem.rs  mod.rs
src/rust/src/fs/fat16/: boot_sector.rs  directory.rs  driver.rs  fat_table.rs  file.rs  filesystem.rs  mod.rs  utils.rs
src/rust/src/idt80/: file.rs  heap.rs  io.rs  misc.rs  mod.rs  process.rs
src/rust/src/interrupts/: handler.rs  idt.rs  interrupt.rs  interrupt_frame.rs  irq_numbers.rs  mod.rs  register.rs  utils.rs
src/rust/src/interrupts/callback/: clock.rs  exceptions.rs  mod.rs
src/rust/src/interrupts/idt80/: file.rs  heap.rs  io.rs  misc.rs  mod.rs  process.rs
src/rust/src/interrupts/syscall/: abi.rs  dispatcher.rs  file.rs  heap.rs  io.rs  misc.rs  mod.rs  network.rs  process.rs  register.rs  signal.rs  sync.rs  types.rs  user.rs
src/rust/src/loader/: elf.rs
src/rust/src/memory/: allocator.rs  mod.rs  page.rs  page_directory.rs
src/rust/src/net/: arp.rs  dhcp.rs  dns.rs  icmp.rs  mod.rs  packet.rs  udp.rs
src/rust/src/schedule/: mod.rs  process.rs  process_manager.rs  semaphore.rs  task.rs  task_manager.rs
src/rust/src/schedule/loader/: elf.rs
src/rust/src/task/: mod.rs  process.rs  process_manager.rs  task.rs  task_manager.rs
(+120 files in other folders)
