[package]
name = "rust_kernel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
bindgen = "0.71.0"
walkdir = "2.3"

[dependencies]
bitflags = "2.9.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"
spin = "0.10.0"
uart_16550 = "0.3.2"
bytemuck = "1.23"
fatfs = { git = "https://github.com/rafalh/rust-fatfs.git" , rev = "4eccb50d011146fbed20e133d33b22f3c27292e7", default-features = false, features = ["lfn", "unicode"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 3
