[package]
name = "rust_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.12.1"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.6"
spin = "0.12.0"
uart_16550 = "0.6.0"
bytemuck = "1.25"
fatfs = { git = "https://github.com/rafalh/rust-fatfs.git" , rev = "c4b88477b22ca7e5131fbd8891f62a5deaa88e6e", default-features = false, features = ["lfn", "unicode"] }
paste = "1.0.15"
seq-macro = "0.3.6"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"
debug = false
split-debuginfo = "off"
strip = "symbols"
